--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container header__container">
     <a href="#" class="logo header__logo">
-      <img src="img/logo.svg" alt="" class="logo__img">
+      <img src="img/site-logo.svg" alt="" class="logo__img">
     </a>
     <button class="burger-menu header__burger-menu">
       <span class="burger-menu__line"></span>
