--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
     <a href="#" class="logo header__logo">
       <img src="img/site-logo.svg" alt="" class="logo__img">
     </a>
-    <button class="burger-menu header__burger-menu">
+    <button class="burger-menu header__burger-menu" type="button">
       <span class="burger-menu__line"></span>
     </button>
     <nav class="nav header__nav">
@@ -23,7 +23,7 @@
       </ul>
     </nav>
     <div class="contacts header__contacts">
-      <a href="tel+78125092198" class="contacts__link"><span>+7 (812)</span> 509 21 98</a>
+      <a href="tel:+78125092198" class="contacts__link"><span>+7 (812)</span> 509 21 98</a>
       <button class="contacts__btn btn-reset">перезвоните мне</button>
       <div class="socials">
         <ul class="socials__list list-reset">
@@ -58,7 +58,8 @@
         </ul>
       </div>
     </div>
-    <div class="user-actions">
+
+    <div class="user-actions header__user-actions">
       <button class="user-actions__btn btn-reset">
         <svg>
           <use xlink:href="img/sprite.svg#search" />
