--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,10 +6,10 @@
         <a href="#" class="breadcrumbs__link">Главная</a>
       </li>
       <li class="breadcrumbs__item">
-        <a href="#" class="breadcrumbs__link">Главная</a>
+        <a href="#" class="breadcrumbs__link">Каталог</a>
       </li>
       <li class="breadcrumbs__item">
-        <a href="#" class="breadcrumbs__link">Главная</a>
+        <a href="#" class="breadcrumbs__link">Камины</a>
       </li>
       <li class="breadcrumbs__item breadcrumbs__item_active">
         <a href="#" class="breadcrumbs__link">Монтаж дымоходов</a>
