--- a/src/scss/components/_burger-menu.scss
+++ b/src/scss/components/_burger-menu.scss
@@ -8,6 +8,7 @@
   border-radius: 100%;
   border: 1px solid var(--color-smalt-blue);
   background-color: var(--color-bg);
+  pointer-events: none;
 
   &__line {
     display: block;
