--- a/src/scss/components/_consultation-form.scss
+++ b/src/scss/components/_consultation-form.scss
@@ -1,4 +1,7 @@
 .consultation-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   margin: 0 auto;
   max-width: 866px;
   padding: 55px 55px 55px 59px;
@@ -6,7 +9,15 @@
   background-color: var(--color-bg);
   box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.15);
 
+  @include desktop {
+    justify-content: space-around;
+    gap: 30px;
+    padding: 50px;
+    text-align: center;
+  }
+
   &__title {
+    width: 100%;
     margin-bottom: 17px;
     font-weight: 500;
     font-size: 20px;
@@ -14,6 +25,7 @@
   }
 
   &__subtitle {
+    width: 100%;
     margin-top: 0;
     margin-bottom: 26px;
   }
@@ -21,7 +33,6 @@
   &__input {
     max-width: 238px;
     width: 100%;
-    margin-right: 13px;
     display: inline-block;
     padding: 17px;
     border: 1px solid #e5E5e5;
@@ -29,6 +40,10 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 22px;
+
+    @include desktop {
+      max-width: 354px;
+    }
 
     &::placeholder {
       color: var(--color-silver);
@@ -45,5 +60,9 @@
     color: var(--color-bg);
     background-color: #215359;
     border-radius: 4px;
+
+    @include desktop {
+      margin: 0 60px;
+    }
   }
 }
