--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -2,11 +2,20 @@
   display: block;
   width: 100px;
   height: 100px;
+  @include headerWidth {
+    margin-right: auto;
+  }
+
+  @include tablet {
+    width: 64px;
+    height: 64px;
+  }
 
   &__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
+
 
 }
