--- a/src/scss/components/_peculiarities.scss
+++ b/src/scss/components/_peculiarities.scss
@@ -2,8 +2,15 @@
   padding-top: 20px;
   padding-bottom: 127px;
 
+  @include desktop {
+    padding-bottom: 56px;
+  }
+
   &__section-title {
     margin-bottom: 50px;
+    @include desktop {
+      margin-bottom: 34px;
+    }
   }
 
   &__descr {
@@ -18,6 +25,12 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 98px;
+    flex-wrap: wrap;
+
+    @include desktop {
+      gap: 30px;
+      justify-content: space-around;
+    }
   }
 
   &__title {
@@ -28,6 +41,10 @@
     line-height: 40px;
     text-align: center;
     text-transform: uppercase;
+
+    @include desktop {
+      font-size: 40px;
+    }
   }
 
   &__subtitle {
@@ -36,6 +53,10 @@
     font-size: 22px;
     line-height: 40px;
     text-align: center;
+    @include desktop {
+      font-size: 16px;
+      line-height: 30px;
+    }
   }
 
   &__socials {
@@ -48,11 +69,21 @@
   max-width: 387px;
   width: 100%;
 
+  @include desktop {
+    max-width: 354px;
+    text-align: center;
+  }
+
   &__icon {
     display: block;
     width: 79px;
     height: 79px;
     margin-bottom: 34px;
+
+    @include desktop {
+      margin: 0 auto 34px;
+      text-align: center;
+    }
 
     svg {
       width: 100%;
