--- a/src/scss/components/_work-photos.scss
+++ b/src/scss/components/_work-photos.scss
@@ -1,8 +1,19 @@
 .work-photos {
   padding-top: 50px;
   padding-bottom: 136px;
+
+  @include desktop {
+    padding-top: 10px;
+    padding-bottom: 56px;
+  }
+
   &__section-title {
     margin-bottom: 65px;
+
+    @include desktop {
+      margin-bottom: 35px;
+    }
+
   }
 
   &__descr {
@@ -15,11 +26,21 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
+
+    @include desktop {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 
   &__item {
     position: relative;
     max-height: 260px;
+
+    a {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
     &::before, &::after {
       content: '';
       position: absolute;
