--- a/src/scss/components/_consultation-form.scss
+++ b/src/scss/components/_consultation-form.scss
@@ -12,8 +12,19 @@
   @include desktop {
     justify-content: space-around;
     gap: 30px;
-    padding: 50px;
+    padding-top: 50px;
+    padding-bottom: 45px;
     text-align: center;
+  }
+
+  @include tablet {
+    gap: 17px;
+  }
+
+  @include mobile {
+    padding: 25px 0;
+    border-top: 1px solid #e5e5e5;
+    box-shadow: none;
   }
 
   &__title {
@@ -22,12 +33,23 @@
     font-weight: 500;
     font-size: 20px;
     line-height: 22px;
+    @include tablet {
+      margin-bottom: 2px;
+    }
+    @include mobile {
+      font-size: 18px;
+      line-height: 26px;
+    }
   }
 
   &__subtitle {
     width: 100%;
     margin-top: 0;
     margin-bottom: 26px;
+
+    @include tablet {
+      margin-bottom: 10px;
+    }
   }
 
   &__input {
@@ -61,8 +83,25 @@
     background-color: #215359;
     border-radius: 4px;
 
+
+    &-desk {
+      display: inline;
+
+      @include tablet {
+        display: none;
+      }
+    }
+
+    &-mobile {
+      display: none;
+
+      @include tablet {
+        display: inline;
+      }
+    }
+
     @include desktop {
-      margin: 0 60px;
+      margin: 0 20px;
     }
   }
 }
