--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -60,12 +60,12 @@
     </div>
 
     <div class="user-actions header__user-actions">
-      <button class="user-actions__btn btn-reset">
+      <button class="user-actions__btn btn-reset" id="search">
         <svg>
           <use xlink:href="img/sprite.svg#search" />
         </svg>
       </button>
-      <button class="user-actions__btn btn-reset">
+      <button class="user-actions__btn btn-reset" id="favorites">
         <svg>
           <use xlink:href="img/sprite.svg#heart" />
         </svg>
