--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -11,6 +11,11 @@
     height: 64px;
   }
 
+  @include mobile {
+    width: 48px;
+    height: 48px;
+  }
+
   &__img {
     width: 100%;
     height: 100%;
