--- a/src/scss/components/_work-photos.scss
+++ b/src/scss/components/_work-photos.scss
@@ -11,15 +11,26 @@
     margin-bottom: 65px;
 
     @include desktop {
-      margin-bottom: 35px;
+      margin-bottom: 28px;
     }
-
+    @include mobile {
+      margin-bottom: 15px;
+    }
   }
 
   &__descr {
     margin-bottom: 48px;
     font-size: 16px;
     line-height: 30px;
+
+    @include tablet {
+      margin-bottom: 35px;
+    }
+    @include mobile {
+      margin-bottom: 15px;
+      font-size: 14px;
+      line-height: 26px;
+    }
   }
 
   &__list {
@@ -30,12 +41,24 @@
     @include desktop {
       grid-template-columns: repeat(3, 1fr);
     }
+
+    @include mobile {
+      grid-template-columns: repeat(2, 1fr);
+      justify-content: space-between;
+      gap: 16px 30px;
+    }
   }
 
   &__item {
     position: relative;
     max-height: 260px;
 
+    @include tablet {
+      max-height: 208px;
+    }
+    @include mobile {
+      max-height: 120px;
+    }
     a {
       display: block;
       width: 100%;
