add themes change

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -77,5 +77,9 @@
         <span class="user-actions__amount amount">10</span>
       </button>
     </div>
+    <div class="themes header__themes">
+      <input id="theme" type="checkbox" class="themes__input visually-hidden">
+      <label for="theme" class="themes__label"></label>
+    </div>
   </div>
 </header>
