--- a/src/partials/peculiarities.html
+++ b/src/partials/peculiarities.html
@@ -85,7 +85,7 @@
       <p class="consultation-form__subtitle">С Вами свяжутся в ближайшее время</p>
       <input class="consultation-form__input" type="text" placeholder="Ваше имя" name="name">
       <input class="consultation-form__input" type="tel" placeholder="Ваш телефон" name="phone">
-      <button class="consultation-form__btn" type="submit">
+      <button class="consultation-form__btn btn-reset" type="submit">
         <span class="consultation-form__btn-desk">отправить</span>
         <span class="consultation-form__btn-mobile">оставить заявку</span>
       </button>
