--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   padding: 88px 0;
   background-color: var(--color-footer-bg);
-  color: var(--color-bg);
+  color: #fff;
 
   @include desktop {
     padding: 26px 0;
