--- a/src/scss/components/_user-actions.scss
+++ b/src/scss/components/_user-actions.scss
@@ -15,6 +15,7 @@
     height: 56px;
     border-radius: 100%;
     border: 1px solid #e5e5e5;
+    color: var(--color-smalt-blue);
 
     @include mobile {
       width: 44px;
