--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,6 +11,7 @@
 @import 'components/socials';
 @import 'components/contacts';
 @import 'components/user-actions';
+@import 'components/themes';
 @import 'components/mobile-menu';
 @import 'components/hero';
 @import 'components/breadcrumbs';
