--- a/src/scss/components/_consultation-form.scss
+++ b/src/scss/components/_consultation-form.scss
@@ -57,6 +57,7 @@
     width: 100%;
     display: inline-block;
     padding: 17px;
+    background-color: inherit;
     border: 1px solid #e5E5e5;
     border-radius: 4px;
     font-weight: 500;
