--- a/src/scss/components/_mobile-menu.scss
+++ b/src/scss/components/_mobile-menu.scss
@@ -9,9 +9,15 @@
   top: 0;
   right: 0;
   background-color: var(--color-bg);
+  border: 1px solid var(--color-smalt-blue);
   z-index: 3;
   transform: translateY(-100%);
   transition: transform .3s ease-in-out;
+
+  & .themes {
+    top: auto;
+    bottom: 20px;
+  }
 
   @media (max-width: 500px) {
     max-width: 100%;
